# AutoAIM-Studio

./: .gitignore  106-Features.docx  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Issues  LICENSE  README.md  __init__.py  conftest.py  install_linux.sh  main.py  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.py  test_data_loading.py  test_feature_engineering.py  test_inference.py  test_model_training.py
core/: __init__.py  crystal_structure.py  data_manager.py  domain_applicability.py  ensemble_trainer.py  explainer.py  feature_engineering.py  inference_engine.py  model_registry.py  model_saver.py  nn_builder.py  optimizer.py  trainer.py  validator.py
gui/: __init__.py  data_tab.py  ensemble_tab.py  explainability_tab.py  inference_tab.py  main_window.py  nn_builder_tab.py  optimization_tab.py  results_tab.py  training_tab.py
utils/: __init__.py  config.py  hardware_detector.py  logger.py
